--- a/index.html
+++ b/index.html
@@ -14,6 +14,27 @@
 </head>
 <body>
 
+<section class="search-field_large">
+  <label>
+    <input
+            type="text"
+            placeholder="&quot;Try Los Angeles&quot;"
+            data-qa="big"
+            data-qa="keypress"
+            class="search large-input">
+  </label>
+</section>
+
+<section class="search-field_small">
+  <label>
+    <input
+            type="text"
+            placeholder="&quot;Try Los Angeles&quot;"
+            data-qa="small"
+            class="search small-input">
+  </label>
+</section>
+
 <script type="text/javascript" src="./main.js"></script>
 </body>
 </html>
